src/nimhdf5/H5Tpublic.nim


proc H5Tcreate*(`type`: H5T_class_t; size: csize): hid_t {.cdecl, importc: "H5Tcreate",
    dynlib: libname.}
proc H5Tcopy*(type_id: hid_t): hid_t {.cdecl, importc: "H5Tcopy", dynlib: libname.}
proc H5Tclose*(type_id: hid_t): herr_t {.cdecl, importc: "H5Tclose", dynlib: libname.}
proc H5Tequal*(type1_id: hid_t; type2_id: hid_t): htri_t {.cdecl, importc: "H5Tequal",
    dynlib: libname.}
proc H5Tlock*(type_id: hid_t): herr_t {.cdecl, importc: "H5Tlock", dynlib: libname.}
proc H5Tcommit2*(loc_id: hid_t; name: cstring; type_id: hid_t; lcpl_id: hid_t;
                tcpl_id: hid_t; tapl_id: hid_t): herr_t {.cdecl,
    importc: "H5Tcommit2", dynlib: libname.}
proc H5Topen2*(loc_id: hid_t; name: cstring; tapl_id: hid_t): hid_t {.cdecl,
    importc: "H5Topen2", dynlib: libname.}
proc H5Tcommit_anon*(loc_id: hid_t; type_id: hid_t; tcpl_id: hid_t; tapl_id: hid_t): herr_t {.
    cdecl, importc: "H5Tcommit_anon", dynlib: libname.}
proc H5Tget_create_plist*(type_id: hid_t): hid_t {.cdecl,
    importc: "H5Tget_create_plist", dynlib: libname.}
proc H5Tcommitted*(type_id: hid_t): htri_t {.cdecl, importc: "H5Tcommitted",
    dynlib: libname.}
proc H5Tencode*(obj_id: hid_t; buf: pointer; nalloc: ptr csize): herr_t {.cdecl,
    importc: "H5Tencode", dynlib: libname.}
proc H5Tdecode*(buf: pointer): hid_t {.cdecl, importc: "H5Tdecode", dynlib: libname.}
proc H5Tflush*(type_id: hid_t): herr_t {.cdecl, importc: "H5Tflush", dynlib: libname.}
proc H5Trefresh*(type_id: hid_t): herr_t {.cdecl, importc: "H5Trefresh",
                                       dynlib: libname.}
##  Operations defined on compound datatypes

proc H5Tinsert*(parent_id: hid_t; name: cstring; offset: csize; member_id: hid_t): herr_t {.
    cdecl, importc: "H5Tinsert", dynlib: libname.}
proc H5Tpack*(type_id: hid_t): herr_t {.cdecl, importc: "H5Tpack", dynlib: libname.}
##  Operations defined on enumeration datatypes

proc H5Tenum_create*(base_id: hid_t): hid_t {.cdecl, importc: "H5Tenum_create",
    dynlib: libname.}
proc H5Tenum_insert*(`type`: hid_t; name: cstring; value: pointer): herr_t {.cdecl,
    importc: "H5Tenum_insert", dynlib: libname.}
proc H5Tenum_nameof*(`type`: hid_t; value: pointer; name: cstring; ## out
                    size: csize): herr_t {.cdecl, importc: "H5Tenum_nameof",
                                        dynlib: libname.}
proc H5Tenum_valueof*(`type`: hid_t; name: cstring; value: pointer): herr_t {.cdecl,
    importc: "H5Tenum_valueof", dynlib: libname.}
  ## out
##  Operations defined on variable-length datatypes

proc H5Tvlen_create*(base_id: hid_t): hid_t {.cdecl, importc: "H5Tvlen_create",
    dynlib: libname.}
##  Operations defined on array datatypes

proc H5Tarray_create2*(base_id: hid_t; ndims: cuint; dim: ptr hsize_t): hid_t {.cdecl,
    importc: "H5Tarray_create2", dynlib: libname.}
  ##  ndims
proc H5Tget_array_ndims*(type_id: hid_t): cint {.cdecl,
    importc: "H5Tget_array_ndims", dynlib: libname.}
proc H5Tget_array_dims2*(type_id: hid_t; dims: ptr hsize_t): cint {.cdecl,
    importc: "H5Tget_array_dims2", dynlib: libname.}
##  Operations defined on opaque datatypes

proc H5Tset_tag*(`type`: hid_t; tag: cstring): herr_t {.cdecl, importc: "H5Tset_tag",
    dynlib: libname.}
proc H5Tget_tag*(`type`: hid_t): cstring {.cdecl, importc: "H5Tget_tag",
                                       dynlib: libname.}
##  Querying property values

proc H5Tget_super*(`type`: hid_t): hid_t {.cdecl, importc: "H5Tget_super",
                                       dynlib: libname.}
proc H5Tget_class*(type_id: hid_t): H5T_class_t {.cdecl, importc: "H5Tget_class",
    dynlib: libname.}
proc H5Tdetect_class*(type_id: hid_t; cls: H5T_class_t): htri_t {.cdecl,
    importc: "H5Tdetect_class", dynlib: libname.}
proc H5Tget_size*(type_id: hid_t): csize {.cdecl, importc: "H5Tget_size",
                                       dynlib: libname.}
proc H5Tget_order*(type_id: hid_t): H5T_order_t {.cdecl, importc: "H5Tget_order",
    dynlib: libname.}
proc H5Tget_precision*(type_id: hid_t): csize {.cdecl, importc: "H5Tget_precision",
    dynlib: libname.}
proc H5Tget_offset*(type_id: hid_t): cint {.cdecl, importc: "H5Tget_offset",
                                        dynlib: libname.}
proc H5Tget_pad*(type_id: hid_t; lsb: ptr H5T_pad_t; ## out
                msb: ptr H5T_pad_t): herr_t {.cdecl, importc: "H5Tget_pad",
    dynlib: libname.}
  ## out
proc H5Tget_sign*(type_id: hid_t): H5T_sign_t {.cdecl, importc: "H5Tget_sign",
    dynlib: libname.}
proc H5Tget_fields*(type_id: hid_t; spos: ptr csize; ## out
                   epos: ptr csize; ## out
                   esize: ptr csize; ## out
                   mpos: ptr csize; ## out
                   msize: ptr csize): herr_t {.cdecl, importc: "H5Tget_fields",
    dynlib: libname.}
  ## out
proc H5Tget_ebias*(type_id: hid_t): csize {.cdecl, importc: "H5Tget_ebias",
                                        dynlib: libname.}
proc H5Tget_norm*(type_id: hid_t): H5T_norm_t {.cdecl, importc: "H5Tget_norm",
    dynlib: libname.}
proc H5Tget_inpad*(type_id: hid_t): H5T_pad_t {.cdecl, importc: "H5Tget_inpad",
    dynlib: libname.}
proc H5Tget_strpad*(type_id: hid_t): H5T_str_t {.cdecl, importc: "H5Tget_strpad",
    dynlib: libname.}
proc H5Tget_nmembers*(type_id: hid_t): cint {.cdecl, importc: "H5Tget_nmembers",
    dynlib: libname.}
proc H5Tget_member_name*(type_id: hid_t; membno: cuint): cstring {.cdecl,
    importc: "H5Tget_member_name", dynlib: libname.}
proc H5Tget_member_index*(type_id: hid_t; name: cstring): cint {.cdecl,
    importc: "H5Tget_member_index", dynlib: libname.}
proc H5Tget_member_offset*(type_id: hid_t; membno: cuint): csize {.cdecl,
    importc: "H5Tget_member_offset", dynlib: libname.}
proc H5Tget_member_class*(type_id: hid_t; membno: cuint): H5T_class_t {.cdecl,
    importc: "H5Tget_member_class", dynlib: libname.}
proc H5Tget_member_type*(type_id: hid_t; membno: cuint): hid_t {.cdecl,
    importc: "H5Tget_member_type", dynlib: libname.}
proc H5Tget_member_value*(type_id: hid_t; membno: cuint; value: pointer): herr_t {.
    cdecl, importc: "H5Tget_member_value", dynlib: libname.}
  ## out
proc H5Tget_cset*(type_id: hid_t): H5T_cset_t {.cdecl, importc: "H5Tget_cset",
    dynlib: libname.}
proc H5Tis_variable_str*(type_id: hid_t): htri_t {.cdecl,
    importc: "H5Tis_variable_str", dynlib: libname.}
proc H5Tget_native_type*(type_id: hid_t; direction: H5T_direction_t): hid_t {.cdecl,
    importc: "H5Tget_native_type", dynlib: libname.}
##  Setting property values

proc H5Tset_size*(type_id: hid_t; size: csize): herr_t {.cdecl, importc: "H5Tset_size",
    dynlib: libname.}
proc H5Tset_order*(type_id: hid_t; order: H5T_order_t): herr_t {.cdecl,
    importc: "H5Tset_order", dynlib: libname.}
proc H5Tset_precision*(type_id: hid_t; prec: csize): herr_t {.cdecl,
    importc: "H5Tset_precision", dynlib: libname.}
proc H5Tset_offset*(type_id: hid_t; offset: csize): herr_t {.cdecl,
    importc: "H5Tset_offset", dynlib: libname.}
proc H5Tset_pad*(type_id: hid_t; lsb: H5T_pad_t; msb: H5T_pad_t): herr_t {.cdecl,
    importc: "H5Tset_pad", dynlib: libname.}
proc H5Tset_sign*(type_id: hid_t; sign: H5T_sign_t): herr_t {.cdecl,
    importc: "H5Tset_sign", dynlib: libname.}
proc H5Tset_fields*(type_id: hid_t; spos: csize; epos: csize; esize: csize; mpos: csize;
                   msize: csize): herr_t {.cdecl, importc: "H5Tset_fields",
                                        dynlib: libname.}
proc H5Tset_ebias*(type_id: hid_t; ebias: csize): herr_t {.cdecl,
    importc: "H5Tset_ebias", dynlib: libname.}
proc H5Tset_norm*(type_id: hid_t; norm: H5T_norm_t): herr_t {.cdecl,
    importc: "H5Tset_norm", dynlib: libname.}
proc H5Tset_inpad*(type_id: hid_t; pad: H5T_pad_t): herr_t {.cdecl,
    importc: "H5Tset_inpad", dynlib: libname.}
proc H5Tset_cset*(type_id: hid_t; cset: H5T_cset_t): herr_t {.cdecl,
    importc: "H5Tset_cset", dynlib: libname.}
proc H5Tset_strpad*(type_id: hid_t; strpad: H5T_str_t): herr_t {.cdecl,
    importc: "H5Tset_strpad", dynlib: libname.}
##  Type conversion database

proc H5Tregister*(pers: H5T_pers_t; name: cstring; src_id: hid_t; dst_id: hid_t;
                 `func`: H5T_conv_t): herr_t {.cdecl, importc: "H5Tregister",
    dynlib: libname.}
proc H5Tunregister*(pers: H5T_pers_t; name: cstring; src_id: hid_t; dst_id: hid_t;
                   `func`: H5T_conv_t): herr_t {.cdecl, importc: "H5Tunregister",
    dynlib: libname.}
proc H5Tfind*(src_id: hid_t; dst_id: hid_t; pcdata: ptr ptr H5T_cdata_t): H5T_conv_t {.
    cdecl, importc: "H5Tfind", dynlib: libname.}
proc H5Tcompiler_conv*(src_id: hid_t; dst_id: hid_t): htri_t {.cdecl,
    importc: "H5Tcompiler_conv", dynlib: libname.}
proc H5Tconvert*(src_id: hid_t; dst_id: hid_t; nelmts: csize; buf: pointer;
                background: pointer; plist_id: hid_t): herr_t {.cdecl,
    importc: "H5Tconvert", dynlib: libname.}
##  Symbols defined for compatibility with previous versions of the HDF5 API.
## 
##  Use of these symbols is deprecated.
## 

when not defined(H5_NO_DEPRECATED_SYMBOLS):
  ##  Macros
  ##  Typedefs
  ##  Function prototypes
  proc H5Tcommit1*(loc_id: hid_t; name: cstring; type_id: hid_t): herr_t {.cdecl,
      importc: "H5Tcommit1", dynlib: libname.}
  proc H5Topen1*(loc_id: hid_t; name: cstring): hid_t {.cdecl, importc: "H5Topen1",
      dynlib: libname.}
  proc H5Tarray_create1*(base_id: hid_t; ndims: cint; dim: ptr hsize_t; ##  ndims
                        perm: ptr cint): hid_t {.cdecl, importc: "H5Tarray_create1",
      dynlib: libname.}
    ##  ndims
  proc H5Tget_array_dims1*(type_id: hid_t; dims: ptr hsize_t; perm: ptr cint): cint {.
      cdecl, importc: "H5Tget_array_dims1", dynlib: libname.}
